Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11818

lupdate generates the same warning multiple times when //% is used

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.7.0
    • 4.6.0
    • Tools: Linguist
    • None
    • f08b60f4ca52d525c1dc9890cb0c6661ee34b069

      Running lupdate on the attached main.cpp produces four warnings, even though the //% comment was used only once.
      The only way to make it go away is by inserting a call to qtTrId().

        1. main.cpp
          0.2 kB
          Kent Hansen
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            buddenha Oswald Buddenhagen
            kenthans Kent Hansen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes