don't complain multiple times about same abuse of //% meta strings

Reviewed-by: Kent Hansen
Task-number: QTBUG-11818
(cherry picked from commit f08b60f4ca52d525c1dc9890cb0c6661ee34b069)